// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bolt button Props border_radius: full 1`] = `
<button type="button"
        class="e-bolt-button e-bolt-button--border-radius-full"
>
  This is a button
</button>
`;

exports[`Bolt button Props border_radius: large 1`] = `
<button type="button"
        class="e-bolt-button e-bolt-button--border-radius-large"
>
  This is a button
</button>
`;

exports[`Bolt button Props border_radius: small 1`] = `
<button type="button"
        class="e-bolt-button"
>
  This is a button
</button>
`;

exports[`Bolt button Props display: block 1`] = `
<button type="button"
        class="e-bolt-button e-bolt-button--block"
>
  This is a button
</button>
`;

exports[`Bolt button Props display: inline 1`] = `
<button type="button"
        class="e-bolt-button"
>
  This is a button
</button>
`;

exports[`Bolt button Props display: inline@from-small 1`] = `
<button type="button"
        class="e-bolt-button e-bolt-button--inline@from-small"
>
  This is a button
</button>
`;

exports[`Bolt button Props hierarchy: primary 1`] = `
<button type="button"
        class="e-bolt-button"
>
  This is a button
</button>
`;

exports[`Bolt button Props hierarchy: secondary 1`] = `
<button type="button"
        class="e-bolt-button e-bolt-button--secondary"
>
  This is a button
</button>
`;

exports[`Bolt button Props hierarchy: tertiary 1`] = `
<button type="button"
        class="e-bolt-button e-bolt-button--tertiary"
>
  This is a button
</button>
`;

exports[`Bolt button Props hierarchy: transparent 1`] = `
<button type="button"
        class="e-bolt-button e-bolt-button--transparent"
>
  This is a button
</button>
`;

exports[`Bolt button Props icon after 1`] = `
<button type="button"
        class="e-bolt-button"
>
  This is a button
  <span class="e-bolt-button__icon-after"
        aria-hidden="true"
  >
    <bolt-icon name="chevron-down"
               aria-hidden="true"
    >
      <span class="c-bolt-icon c-bolt-icon--chevron-down">
        <svg class="c-bolt-icon__icon"
             xmlns="http://www.w3.org/2000/svg"
             viewbox="0 0 32 32"
        >
          <path fill="var(--bolt-theme-icon, currentColor)"
                fill-rule="evenodd"
                d="M25 13c.5-.6.5-1.4 0-2-.6-.5-1.4-.5-2 0l-7 7.1-7-7a1.3 1.3 0 00-2.3.9c0 .3.1.7.4 1l8 8c.5.5 1.3.5 1.8 0l8-8z"
          >
          </path>
        </svg>
      </span>
    </bolt-icon>
  </span>
</button>
`;

exports[`Bolt button Props size: large 1`] = `
<button type="button"
        class="e-bolt-button e-bolt-button--large"
>
  This is a button
</button>
`;

exports[`Bolt button Props size: medium 1`] = `
<button type="button"
        class="e-bolt-button"
>
  This is a button
</button>
`;

exports[`Bolt button Props size: small 1`] = `
<button type="button"
        class="e-bolt-button e-bolt-button--small"
>
  This is a button
</button>
`;

exports[`Bolt button Props size: xsmall 1`] = `
<button type="button"
        class="e-bolt-button e-bolt-button--xsmall"
>
  This is a button
</button>
`;

exports[`Bolt button default 1`] = `
<button type="button"
        class="e-bolt-button"
>
  This is a button
</button>
`;
